Bug 264924 - [WebGPU] webgpu:api,operation,command_buffer,queries,* does not pass
Summary: [WebGPU] webgpu:api,operation,command_buffer,queries,* does not pass
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-11-15 21:52 PST by Mike Wyrzykowski
Modified: 2023-11-18 00:06 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Wyrzykowski 2023-11-15 21:52:33 PST
[WebGPU] webgpu:api,operation,command_buffer,queries,* does not pass
Comment 1 Radar WebKit Bug Importer 2023-11-15 21:52:50 PST
<rdar://problem/118492272>
Comment 2 Mike Wyrzykowski 2023-11-16 18:53:50 PST
Pull request: https://github.com/WebKit/WebKit/pull/20644
Comment 3 EWS 2023-11-18 00:06:57 PST
Committed 270934@main (14d4ec3b58ca): <https://commits.webkit.org/270934@main>

Reviewed commits have been landed. Closing PR #20644 and removing active labels.