[WebGPU] webgpu:api,operation,command_buffer,queries,* does not pass https://bugs.webkit.org/show_bug.cgi?id=264924 <radar://118492272>

Reviewed by Tadeu Zagallo.

The spec requires occlusion queries to be zero if no geometry
is rendered between beginOcclusionQuery / endOcclusionQuery.

Also correct issues preventing sampleMask from working with RenderBundles
which were preventing occlusion queries using RenderBundles from passing
when changing the sample mask values.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebGPU/WebGPU/CommandEncoder.h:
* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::ensureBlitCommandEncoder):
(WebGPU::CommandEncoder::beginRenderPass):
* Source/WebGPU/WebGPU/RenderBundleEncoder.h:
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::endCurrentICB):
(WebGPU::RenderBundleEncoder::icbNeedsToBeSplit):
(WebGPU::RenderBundleEncoder::setPipeline):
* Source/WebGPU/WebGPU/RenderPassEncoder.h:
(WebGPU::RenderPassEncoder::create):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::RenderPassEncoder):
(WebGPU::RenderPassEncoder::beginOcclusionQuery):
(WebGPU::setViewportMinMaxDepthIntoBuffer):
(WebGPU::RenderPassEncoder::executePreDrawCommands):
(WebGPU::RenderPassEncoder::endPass):
(WebGPU::RenderPassEncoder::executeBundles):
(WebGPU::RenderPassEncoder::setPipeline):
* Source/WebGPU/WebGPU/RenderPipeline.h:
(WebGPU::RenderPipeline::create):
(WebGPU::RenderPipeline::sampleMask const):
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::Device::createRenderPipeline):
(WebGPU::RenderPipeline::RenderPipeline):
* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::ShaderModule::convertPipelineLayout):
* LayoutTests/http/tests/webgpu/webgpu/api/operation/command_buffer/queries/occlusionQuery-expected.txt: Added.

Canonical link: https://commits.webkit.org/270934@main